Updated with CoPilot code

--- a/src/components/widgets/Content.astro
+++ b/src/components/widgets/Content.astro
@@ -6,6 +6,24 @@ import Image from '~/components/common/Image.astro';
 import Button from '~/components/ui/Button.astro';
 import ItemGrid from '../ui/ItemGrid.astro';
 
+interface ContentProps {
+  title: string;
+  subtitle?: string;
+  tagline?: string;
+  description?: string;
+  content?: string;
+  callToAction?: any;
+  items?: any[];
+  columns?: number;
+  image?: any;
+  isReversed?: boolean;
+  isAfterContent?: boolean;
+  id?: string;
+  isDark?: boolean;
+  classes?: any;
+  bg?: any;
+}
+
 const {
   title = await Astro.slots.render('title'),
   subtitle = await Astro.slots.render('subtitle'),
@@ -23,7 +41,7 @@ const {
   isDark = false,
   classes = {},
   bg = await Astro.slots.render('bg'),
-} = Astro.props;
+} = Astro.props as ContentProps;
 ---
 
 <WidgetWrapper
@@ -94,4 +112,3 @@ const {
     </div>
   </div>
 </WidgetWrapper>
-
