--- a/src/pages/climb/alpine-climbing.astro
+++ b/src/pages/climb/alpine-climbing.astro
@@ -1,10 +1,9 @@
 ---
-import CallToAction from '~/components/widgets/CallToAction.astro';
-import Content from '~/components/widgets/Content.astro';
+
 import Features2 from '~/components/widgets/Features2.astro';
 import Hero from '~/components/widgets/Hero.astro';
-import Testimonials from '~/components/widgets/Testimonials.astro';
 import Layout from '~/layouts/PageLayout.astro';
+import Slider from '~/components/widgets/MySwiper.astro';
 
 const metadata = {
   title: 'Alpine Climbing',
@@ -12,6 +11,10 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
+  <!-- Swiper Slider ******************* -->
+
+  <Slider />
+  
   <!-- Hero Widget ******************* -->
 
   <Hero
